Let circular references silently pass and added code comment